# pandora-compiler

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  build.rs  external.box  output.rs  util.boxx
documents/BC/: main.tex
documents/bc/: main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.lot  main.out  main.synctex(busy)  main.tex  main.toc  preamble.tex  refs.bib
documents/dc/: dc_test_v4.tex
error_codes/: E0001.md  E0002.md  E0003.md  E0004.md  E0007.md  E0008.md  E0012.md  E0013.md  E0014.md  E0016.md  E0100.md  E0102.md  E0200.md  E0201.md  E0202.md  E0203.md  E0204.md  E0205.md  E0206.md  E0207.md  E0209.md  E0210.md  E0211.md  E0214.md  E0215.md  E0216.md  E0218.md  E0220.md  E0221.md  E0222.md  E0223.md  E0226.md  E0227.md  E0228.md  E0230.md  E0232.md  E0233.md  E0234.md  E0236.md  E0238.md  (+8 more)
example/chaos/: fib.unbx  is_prime.unbx
example/errors/: test.box
example/special_features/: multiline_str.box  num_base.box  raw_ident.box  raw_str.box  underscore_for_nums.box
grammar/: dummy.txt  grammar.tex  main.tex  preamble.tex  productions.tex
grammar/automata/: number.aux  number.tex  symbol.aux  symbol.tex  test.aux  test.tex
grammar/styles/: tikzconfig.sty
src/: ast.rs  dummy_code.box  environment.rs  error_codes  error_codes.md  error_docs.rs  error_handler.rs  interner.rs  interpreter.rs  ir.rs  ir_rust.rs  keyword.rs  lexer.rs  libs.rs  main.rs  parse.rs  sem.rs  session.rs  session_global.rs  span_encoding.rs  symbol.rs  symbol_table.rs  token.rs  visitor.rs
src/ast/: ident.rs  pretty_print.rs  token.rs  (+1 more)
tools/: Dockerfile  compose.yaml
(+348 files in other folders)
