[package]
name = "pandora-interpreter"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "A command-line tool to run pandora language."

[[bin]]
name = "unbox"        # The custom command name
path = "src/main.rs"  # Path to the binary source file

[dependencies]
emojis = "0.6.4"
english-numbers = "0.3.3"
miette = { version = "7.2.0", features = ["fancy"] }
once_cell = "1.20.2"
symbol = "0.1.9"
thiserror = "1.0.67"
unicode-xid = "0.2.6"
